--- a/example/index.html
+++ b/example/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div id="map" style="width: 800px; height: 600px"></div>
-	<script src="js/leaflet.js"></script>
-	<script src="js/leaflet.draw/leaflet.draw.js"></script>
+	<script src="js/leaflet-src.js"></script>
+	<script src="js/leaflet.draw/leaflet.draw-src.js"></script>
 	<script src="../src/leaflet.draw.straightlines.js"></script>
 	<script src="js/index.js"></script>
 	
