--- a/example/index.html
+++ b/example/index.html
@@ -5,15 +5,14 @@
 	<title>Leaflet draw straight lines</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/leaflet.css" />
-	<link rel="stylesheet" href="js/leaflet.draw/leaflet.draw.css" />
+	<link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
+	<link rel="stylesheet" href="../node_modules/leaflet-draw/dist/leaflet.draw.css" />
 </head>
 <body>
 	<div id="map" style="width: 800px; height: 600px"></div>
-	<script src="js/leaflet.js"></script>
-	<script src="js/leaflet.draw/leaflet.draw.js"></script>
+	<script src="../node_modules/leaflet/dist/leaflet.js"></script>
+	<script src="../node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
 	<script src="../src/leaflet.draw.straightlines.js"></script>
 	<script src="js/index.js"></script>
-	
 </body>
 </html>
